--- a/es/index.html
+++ b/es/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="es" dir="ltr"><head>
   <meta charset="utf-8">
   <title>Cv Juan Fernando</title>
-  <base href="/es/">
+  <base href="https://juanferr1098.github.io/cv-juan-fernando/es/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
